copilot webview renderer

--- a/source/vscode/package.json
+++ b/source/vscode/package.json
@@ -934,6 +934,22 @@
           ],
           "additionalProperties": false
         }
+      },
+      {
+        "name": "qdk-test",
+        "canBeReferencedInPrompt": true,
+        "displayName": "qdkTest",
+        "toolReferenceName": "qdkTest",
+        "userDescription": "just a tool to test tool calling in this model. call this only when directly referenced by name.",
+        "modelDescription": "just a tool to test tool calling in this model. call this only when directly referenced by name."
+      }
+    ],
+    "chatOutputRenderers": [
+      {
+        "viewType": "qdk-config-renderer",
+        "mimeTypes": [
+          "application/x.qsharp-config"
+        ]
       }
     ]
   },
@@ -954,5 +970,16 @@
     "url": "https://github.com/microsoft/qsharp.git"
   },
   "license": "SEE LICENSE IN LICENSE.txt",
-  "aiKey": "0c6ae279ed8443289764825290e4f9e2-1a736e7c-1324-4338-be46-fc2a58ae4d14-7255"
+  "aiKey": "0c6ae279ed8443289764825290e4f9e2-1a736e7c-1324-4338-be46-fc2a58ae4d14-7255",
+  "enabledApiProposals": [
+    "chatOutputRenderer",
+    "languageModelToolResultAudience",
+    "languageModelThinkingPart",
+    "languageModelSystem",
+    "languageModelDataPart",
+    "languageModelCapabilities",
+    "chatEditing",
+    "chatReferenceBinaryData",
+    "chatReferenceDiagnostic"
+  ]
 }
