Copilot Reads Summaries from DocGen Tool (#2672)
Adds a Copilot tool called `qsharpGetLibraryDescriptions` which gives
Copilot updated descriptions of Q# Library API items, allowing it to
make more accurate use of library items in generating Q# snippets and in
answering user questions about the libraries.
The doc get tool is modified to include a way to generate these
summaries in a JSON that is used by the Copilot tool.

--- a/source/vscode/package.json
+++ b/source/vscode/package.json
@@ -934,6 +934,25 @@
           ],
           "additionalProperties": false
         }
+      },
+      {
+        "name": "qsharp-get-library-descriptions",
+        "tags": [
+          "azure-quantum",
+          "qsharp",
+          "qdk"
+        ],
+        "toolReferenceName": "qsharpGetLibraryDescriptions",
+        "displayName": "Get Q# Library API Descriptions",
+        "modelDescription": "Returns a Markdown string summarizing all Q# standard library items, grouped by namespace. Each entry includes its signature and a short description extracted from doc comments when available. Use this tool to answer any questions about Q# library functions or to ensure generated Q# code uses library functions correctly.",
+        "canBeReferencedInPrompt": true,
+        "icon": "./resources/file-icon-light.svg",
+        "inputSchema": {
+          "type": "object",
+          "properties": {},
+          "required": [],
+          "additionalProperties": false
+        }
       }
     ]
   },
