Add optional operation to circuit tool

--- a/source/vscode/package.json
+++ b/source/vscode/package.json
@@ -864,7 +864,7 @@
         ],
         "toolReferenceName": "qdkGenerateCircuit",
         "displayName": "Generate Quantum Circuit Diagram",
-        "modelDescription": "Generates a visual circuit diagram for a Q# or OpenQASM program. The path to a .qs or .qasm file must be specified in the `filePath` parameter. This tool will compile the program and generate a quantum circuit diagram that visually represents the quantum operations in the code. If the program contains any dynamic behavior such as comparing measurement results, then the program will be executed using a quantum simulator, and the resulting circuit diagram will simply be a trace of the operations that were actually executed during simulation.",
+        "modelDescription": "Generates a visual circuit diagram for a Q# or OpenQASM program. The path to a .qs or .qasm file must be specified in the `filePath` parameter. This tool will compile the program and generate a quantum circuit diagram that visually represents the quantum operations in the code. If the program contains any dynamic behavior such as comparing measurement results, then the program will be executed using a quantum simulator, and the resulting circuit diagram will simply be a trace of the operations that were actually executed during simulation. The diagram is rendered directly to the user, and the raw data is returned to you just for context. *Don't* attempt to render the diagram or repeat the information, as the diagram is already shown to the user.",
         "canBeReferencedInPrompt": true,
         "icon": "./resources/file-icon-light.svg",
         "inputSchema": {
@@ -873,6 +873,10 @@
             "filePath": {
               "type": "string",
               "description": "The absolute path to the .qs or .qasm file. If this file is part of a project, the whole project will be compiled as the program. A .qs file belongs to a project if it resides anywhere under a src/ directory whose parent directory also contains a qsharp.json manifest."
+            },
+            "entryPoint": {
+              "type": "string",
+              "description": "(Optional) The fully qualified name of the operation to generate the circuit diagram for. When constructing the fully qualified name, take implicit namespaces into account. The operation *must* take no arguments. If not specified, the default entrypoint will be used (`Main()` or the operation marked with `@EntryPoint()`"
             }
           },
           "required": [
