Significant addition to try to generalize the type inferencing changes. WIP lambda params still don't infer correctly.

--- a/source/compiler/qsc_frontend/Cargo.toml
+++ b/source/compiler/qsc_frontend/Cargo.toml
@@ -27,3 +27,7 @@ workspace = true
 
 [lib]
 doctest = false
+
+[features]
+# (Former numeric_promotion feature merged into baseline; feature stanza left for future additions.)
+default = []
