--- a/source/pip/pyproject.toml
+++ b/source/pip/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 [project.optional-dependencies]
 jupyterlab = ["qsharp-jupyterlab"]
 widgets = ["qsharp-widgets"]
-qiskit = ["qiskit>=1.2.2,<2.0.0"]
+qiskit = ["qiskit>=2.0.0"]
 
 [build-system]
 requires = ["maturin ~= 1.8.7"]
