Adds an operation EnableMemoryComputeArchitecture to assume in resource estimation that qubits are partitioned into memory and compute qubits.
Based on the capacity of the compute qubits, resource estimation will track the number of READ and WRITE operations into the memory qubits based on eviction strategies for the compute qubits (LRU and LFU).

--- a/source/resource_estimator/Cargo.toml
+++ b/source/resource_estimator/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 [dependencies]
 qsc = { path = "../compiler/qsc" }
 thiserror = { workspace = true }
-miette = { workspace = true }
+miette = { workspace = true, features = ["fancy-no-syscall"] }
 num-bigint = { workspace = true }
 num-complex = { workspace = true }
 rand = { workspace = true }
