--- a/qdk_package/pyproject.toml
+++ b/qdk_package/pyproject.toml
@@ -18,7 +18,13 @@ dependencies = [
 widgets = ["qsharp-widgets==1.20.0"]
 azure = ["azure-quantum==3.2.0"]
 qiskit = ["qiskit>=1.2.2,<2.0.0"]
-all = ["qsharp-widgets==1.20.0", "azure-quantum==3.2.0", "qiskit>=1.2.2,<2.0.0"]
+jupyterlab = ["qsharp-jupyterlab==1.20.0"]
+all = [
+  "qsharp-widgets==1.20.0",
+  "azure-quantum==3.2.0",
+  "qiskit>=1.2.2,<2.0.0",
+  "qsharp-jupyterlab==1.20.0",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
