--- a/source/qdk_package/pyproject.toml
+++ b/source/qdk_package/pyproject.toml
@@ -10,19 +10,17 @@ readme = "README.md"
 authors = [ { name = "Microsoft" } ]
 license = { file = "LICENSE.txt" }
 requires-python = ">=3.9"
-dependencies = [
-  "qsharp==1.20.0",  # rely on existing package
-]
+dependencies = ["qsharp==0.0.0"]
 
 [project.optional-dependencies]
-jupyter = ["qsharp-widgets==1.20.0", "qsharp-jupyterlab==1.20.0"]
+jupyter = ["qsharp-widgets==0.0.0", "qsharp-jupyterlab==0.0.0"]
 azure = ["azure-quantum==3.2.0"]
 qiskit = ["qiskit>=1.2.2,<2.0.0"]
 all = [
-  "qsharp-widgets==1.20.0",
+  "qsharp-widgets==0.0.0",
   "azure-quantum==3.2.0",
   "qiskit>=1.2.2,<2.0.0",
-  "qsharp-jupyterlab==1.20.0",
+  "qsharp-jupyterlab==0.0.0",
 ]
 
 [tool.setuptools.packages.find]
